# chromosomeloc_annotator

./: .gitignore  README.rst  chromloc_annotator.json  design.md  hierarchy.cx2  pyproject.toml  requirements.txt
chromloc/: __init__.py  annotate.py  cli.py
docker/: Dockerfile  Makefile
